[metadata]
name = ssh-key-manager
version = 0.9.1
description = Build authorized key files from a directory of public keys
license = GPLv3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = sshkeymanager

[options.packages.find]
where=sshkeymanager

[options.entry_points]
console_scripts =
    ssh-key-manager = sshkeymanager.cli:main
